# hwpxlib

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  md2hwpx.py  pyproject.toml
.github/workflows/: test.yml
converters/: __init__.py  md2hwpx.py  md_parser.py
hwpxlib/: __init__.py  builder.py  constants.py  document.py  form.py  package.py  style_config.py  template.py  xml_writer.py
hwpxlib/models/: __init__.py  body.py  head.py  meta.py
mcp_server/: __init__.py  hwp_engine.py  server.py
reference/: extract_reference.py
reference/extracted/colorlight/: _zip_metadata.txt  settings.xml
reference/extracted/colorlight/Contents/: section0.xml
reference/extracted/colorlight/Preview/: PrvText.txt
reference/extracted/patent/: _zip_metadata.txt  version.xml
reference/extracted/patent/Contents/: header.xml  section0.xml
reference/extracted/patent/Preview/: PrvText.txt
specs/: 01-zip-container.md  02-meta-xml.md  03-header-fontfaces.md  04-header-borderfills.md  05-header-char-properties.md  06-header-para-properties.md  07-header-styles-numbering.md  08-section-structure.md  09-paragraph-runs.md  10-tables.md  11-md-conversion.md  12-hyperlinks.md  13-nested-ordered-lists.md  14-image-embedding.md  15-header-footer.md  16-toc.md  17-style-customization.md  18-blockquote.md
tests/: __init__.py  conftest.py  test_form.py  test_header_xml.py  test_new_features.py  test_roundtrip.py  test_section_xml.py  test_security.py  test_table_xml.py  test_zip_container.py  validate_xml.py
