[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpxlib"
version = "0.1.0"
description = "Python library for creating HWPX (한글) documents"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "mirisu"},
]
readme = "README.md"
keywords = ["hwpx", "hwp", "hancom", "hangul", "한글", "owpml", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/mirisu/hwpxlib"
Repository = "https://github.com/mirisu/hwpxlib"
Issues = "https://github.com/mirisu/hwpxlib/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.26.0"]
dev = ["pytest"]

[project.scripts]
md2hwpx = "md2hwpx:main"

[tool.setuptools.packages.find]
include = ["hwpxlib*", "converters*"]
exclude = ["tests*", "reference*", "specs*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
